cmake_minimum_required(VERSION 3.2)
project(abcd)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    account/Account.cpp
    account/Account.hpp
    account/AccountCategories.cpp
    account/AccountCategories.hpp
    account/AccountSettings.cpp
    account/AccountSettings.hpp
    account/PluginData.cpp
    account/PluginData.hpp
    account/WalletList.cpp
    account/WalletList.hpp
    bitcoin/Testnet.cpp
    bitcoin/Testnet.hpp
    bitcoin/Text.cpp
    bitcoin/Text.hpp
    bitcoin/Watcher.cpp
    bitcoin/Watcher.hpp
    bitcoin/WatcherBridge.cpp
    bitcoin/WatcherBridge.hpp
    crypto/Crypto.cpp
    crypto/Crypto.hpp
    crypto/Encoding.cpp
    crypto/Encoding.hpp
    crypto/OtpKey.cpp
    crypto/OtpKey.hpp
    crypto/Random.cpp
    crypto/Random.hpp
    crypto/Scrypt.cpp
    crypto/Scrypt.hpp
    exchange/Currency.cpp
    exchange/Currency.hpp
    exchange/Exchange.cpp
    exchange/Exchange.hpp
    exchange/ExchangeCache.cpp
    exchange/ExchangeCache.hpp
    exchange/ExchangeSource.cpp
    exchange/ExchangeSource.hpp
    http/AirbitzRequest.cpp
    http/AirbitzRequest.hpp
    http/Http.cpp
    http/Http.hpp
    http/HttpRequest.cpp
    http/HttpRequest.hpp
    http/Pinning.cpp
    http/Pinning.hpp
    json/JsonArray.cpp
    json/JsonArray.hpp
    json/JsonBox.cpp
    json/JsonBox.hpp
    json/JsonObject.cpp
    json/JsonObject.hpp
    json/JsonPtr.cpp
    json/JsonPtr.hpp
    login/Lobby.cpp
    login/Lobby.hpp
    login/Login.cpp
    login/Login.hpp
    login/LoginDir.cpp
    login/LoginDir.hpp
    login/LoginPackages.hpp
    login/LoginPassword.cpp
    login/LoginPassword.hpp
    login/LoginPin.cpp
    login/LoginPin.hpp
    login/LoginRecovery.cpp
    login/LoginRecovery.hpp
    login/LoginServer.cpp
    login/LoginServer.hpp
    login/Otp.cpp
    login/Otp.hpp
    spend/Broadcast.cpp
    spend/Broadcast.hpp
    spend/Inputs.cpp
    spend/Inputs.hpp
    spend/Outputs.cpp
    spend/Outputs.hpp
    spend/PaymentProto.cpp
    spend/PaymentProto.hpp
    spend/Spend.cpp
    spend/Spend.hpp
    util/AutoFree.hpp
    util/Data.cpp
    util/Data.hpp
    util/Debug.cpp
    util/Debug.hpp
    util/FileIO.cpp
    util/FileIO.hpp
    util/Json.cpp
    util/Json.hpp
    util/Mutex.cpp
    util/Mutex.hpp
    util/Status.cpp
    util/Status.hpp
    util/Sync.cpp
    util/Sync.hpp
    util/U08Buf.cpp
    util/U08Buf.hpp
    util/Util.cpp
    util/Util.hpp
    config.h
    Export.cpp
    Export.hpp
    General.cpp
    General.hpp
    Tx.cpp
    Tx.hpp
    Wallet.cpp
    Wallet.hpp
    ../src/ABC.cpp
    ../src/ABC.h)

add_executable(abcd ${SOURCE_FILES})